# Development

./: .gitignore  README  autoload.ini
cpp_source/ball_tracker/: CMakeLists.txt  cpp_orig.cpp
cpp_source/boost_cross_compile/: CMakeLists.txt  nao_test.cpp  qiproject.xml
cpp_source/boost_python_example/: CMakeLists.txt  test.cpp
cpp_source/goal_tracker/: CMakeLists.txt  goal_tracker.i  locateGoalzor.cpp  locateGoalzor.h  qiproject.xml
cpp_source/swig_example/: .CMakeLists.txt.swp  .nao_test.cpp.swp  .nao_test.i.swp  CMakeLists.txt  nao_test.cpp  nao_test.i  qiproject.xml
democode/HumanInterface/: KeyboardInterface.py  Readme.txt  mimicker.py
democode/xboxcontroller/: main.py  motions.py  processmotion.py
latex/.svn/: all-wcprops  entries
latex/PaperIranOpen2012/: HumanInterface.aux  HumanInterface.bbl  HumanInterface.blg  HumanInterface.tex  algorithm2e.sty  bib.bib  references.bib
latex/TDP2012/: DutchNaoTeamIranQualification2012.tex  DutchNaoTeamMexicoQualification2012.tex  references.bib  tdp.aux  tdp.bbl  tdp.blg
latex/Technical Report/: Makefile  TechnicalReport.tex  mystyle.bst  mystyle.dbj  references.bib
latex/UvA Contact/: uvacontact.tex
naoinfo/: NAOINFO.txt
naoinfo/.svn/: all-wcprops  entries
naoqi/.svn/: all-wcprops  entries
naoqi/lib/: buttonController.py  coach.py  connectedComponents.py  earlights.py  findGoal.py  fkChain.py  (+22 more)
testsuite/: client.py  filterTools.py  hsvGlade.py  hsvGlade.wxg  hsvGlade07.wxg  imageGrabber.py  magicWand.py  server.py  testsuite.py  testsuite.py.bak  testsuite.wxg
tools/: match_preparation.py
(+86 files in other folders)
